Adição de Fotos e Atualização do Relatório

--- a/Relatorio/Relatorio.tex
+++ b/Relatorio/Relatorio.tex
@@ -168,6 +168,24 @@ e permitir a criação de tabelas dinâmicas, sendo que as novas colunas são: M
 Utilizando as tabelas dinâmicas do Excel, foi possível visualizar os dados de forma mais clara e objetiva, e foram separados da seguinte
 forma: Geral e Especifíca.
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=6cm]{Recursos/MPG_Geral} % Substitua pelo caminho da imagem
+    \vspace{0.5cm}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=6cm]{Recursos/MC_Geral} % Substitua pelo caminho da imagem
+    \vspace{0.5cm}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=6cm]{Recursos/Total_Geral} % Substitua pelo caminho da imagem
+    \vspace{0.5cm}
+\end{figure}
+
 \subsubsection{Geral}
 
 \subsubsection{Especifíca}
