TODO: Adicionar Legenda nas Imagens e comentar um pouco sobre cada grafico

--- a/Relatorio/Relatorio.tex
+++ b/Relatorio/Relatorio.tex
@@ -165,30 +165,39 @@ O nome das colunas também foi alterado para facilitar a sua identificação e f
 e permitir a criação de tabelas dinâmicas, sendo que as novas colunas são: Marca e Modelo.
 
 \subsection{Inserção de Dados}
-Utilizando as tabelas dinâmicas do Excel, foi possível visualizar os dados de forma mais clara e objetiva, e foram separados da seguinte
-forma: Geral e Especifíca.
+Utilizando as tabelas dinâmicas do Excel, foi possível visualizar os dados de forma mais clara e objetiva,
+para isso, foram utilizados gráficos dinâmicos onde é possível visualizar a evolução dos carros ao longo dos anos,
+a evolução da eficiência dos carros ao longo dos anos e ainda a evolução da eficiência dos carros por país.
+\\
+Para isso, o Excel possuí opção de selecionar a visualição dos dados por ano, por país e por marca.
+Isso foi feito pensando na segmentação dos dados, para que seja possível visualizar os dados de forma mais clara e objetiva.
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=6cm]{Recursos/MPG_Geral} % Substitua pelo caminho da imagem
+    \includegraphics[width=6cm]{Recursos/MilhasPorGalaoGrafico.png} % Substitua pelo caminho da imagem
     \vspace{0.5cm}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=6cm]{Recursos/MC_Geral} % Substitua pelo caminho da imagem
+    \includegraphics[width=6cm]{Recursos/CavalagemGrafico.png} % Substitua pelo caminho da imagem
     \vspace{0.5cm}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=6cm]{Recursos/Total_Geral} % Substitua pelo caminho da imagem
+    \includegraphics[width=6cm]{Recursos/AceleraçãoMediaGrafico.png} % Substitua pelo caminho da imagem
     \vspace{0.5cm}
 \end{figure}
 
-\subsubsection{Geral}
 
-\subsubsection{Especifíca}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=6cm]{Recursos/NVeiculosGrafico.png} % Substitua pelo caminho da imagem
+    \vspace{0.5cm}
+\end{figure}
+
+
 
 
 \section{Criação da Dataware House}\label{dwh}
@@ -196,7 +205,6 @@ forma: Geral e Especifíca.
 
 
 \section{Contexto Global}\label{cg}
-Texto sobre supercondutores.
 
 
 \section{Conclusões e Perspectivas de Trabalho Futuro}\label{con}
