Adição da Data Warehouse e Contexto Global

--- a/Relatorio/Relatorio.tex
+++ b/Relatorio/Relatorio.tex
@@ -132,7 +132,7 @@
 \pagenumbering{arabic}
 
 \section{Introdução}\label{intro}
-Neste trabalho irá ser abordado com a Crise do Petróleo influenciou a produção e desenvolvimento
+Neste trabalho irá ser abordado como a Crise do Petróleo influenciou a produção e desenvolvimento
 dos carros entre os anos 1970 e 1980, alterando o motor e por consequência a sua aceleração, eficiência e consumo.
 
 Para analisar esta situação foi utilizada uma base de dados com 393 entradas, com 9 atributos iniciais, sendo estes:
@@ -238,15 +238,43 @@ está sempre a mudar.
     \label{fig:nveig}
     \caption{Número de veículos ao longo dos anos}
 \end{figure}
+\newpage
 %---------------------------------------------------------------------------------------------------------------------------
 \section{Criação da Dataware House}\label{dwh}
+Esta é a nossa proposta de uma Data Warehouse para dada a nossa análise dos dados.
 
-
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=1\textwidth]{Recursos/DiagramaCrisePetroleo.png} % Substitua pelo caminho da imagem
+    \vspace{0.5cm}
+    \label{fig:dcri}
+    \caption{Diagrama da Data Warehouse}
+\end{figure}
+\newpage
 %---------------------------------------------------------------------------------------------------------------------------
 \section{Contexto Global}\label{cg}
+As Crises Petrolíferas de 1973 e 1979 dão contexto às mudanças drasticas nos automóveis que foram visualizadas anteriormente.
 
-%---------------------------------------------------------------------------------------------------------------------------\section{Conclusões e Perspectivas de Trabalho Futuro}\label{con}
-Texto das conclusões.
+A Crise Petrolífera de 1973 (\cite{pet73}) teve início em outubro de 1973 quando os membros da 
+Organização dos Países Árabes Exportadores de Petróleo (OPAEP), que compreende os membros árabes da 
+Organização dos Países Exportadores de Petróleo (OPEP), além do Egito e Síria, proclamaram um embargo petrolífero. 
+O embargo foi direcionado as nações que eram vistas como apoiantes de Israel durante a Guerra do Yom Kippur. 
+As nações alvo do embargo foram inicialmente o Canadá, o Japão, a Holanda, o Reino Unido e os Estados Unidos, 
+com o embargo também mais tarde a expandir-se para Portugal, Rodésia e África do Sul. Até o fim do embargo, em março de 1974, 
+o preço do petróleo subiu de 3 dólares por barril para cerca de 12 dólares no mundo inteiro. Os preços nos EUA foram ainda mais altos. 
+O embargo causou uma crise, ou "choque" de petróleo, com muitos efeitos, de curto ou longo prazo, na política e economia global. 
+Mais tarde, foi chamada o "primeiro choque do petróleo", seguido pela crise do petróleo de 1979, chamada o "segundo choque do petróleo."
+
+A Crise Petrolífera de 1979 (\cite{pet79}) ocorreu no mundo devido à diminuição da produção de petróleo após a Revolução Iraniana. 
+Apesar das reservas globais de petróleo terem diminuido pouco, o pânico generalizado resultou em uma elevação brusca do preço, 
+que aumentou para 39,50 dólares por barril nos 12 meses seguintes, o que formou longas filas em postos de gasolina, como na crise petrolífera de 1973.
+
+Estas Crises Petrolíferas fizeram com que os fabricantes de automóveis tivessem de se adaptar e produzir carros mais eficientes, estas adaptações para 
+veiculos americanos foram dificeis, cujos quais eram conhecidos por serem grandes e terem motores grandes que gastam muito combustível,
+tirevam a sua potencia drasticamente diminuida ao ponto dos modelos desportivos serem considerados muito lentos para a sua categoria.
+Os japoneses aproveitaram a situação pois já produziam carros mais pequenos e eficientes e decidiram começar a vender mais no mercado americano,
+aumentando a sua quota de mercado significativamente.
+%---------------------------------------------------------------------------------------------------------------------------
 
 \newpage
 \renewcommand{\refname}{Bibliografia} % Para artigos
