--- a/Relatorio/Recursos/referencias.bib
+++ b/Relatorio/Recursos/referencias.bib
@@ -1,26 +1,44 @@
 @online{cotr,
-  author    = {COTR},
-  title     = {O que é o COTR?},
-  year      = {2024},
-  url       = {https://www.cotr.pt/empresa/cotr.php},
-  urldate   = {2024-10-31}
+  author  = {COTR},
+  title   = {O que é o COTR?},
+  year    = {2024},
+  url     = {https://www.cotr.pt/empresa/cotr.php},
+  urldate = {2024-10-31}
 }
 
 @online{seq,
-  author    = {Isabel Sofia Brito},
-  title     = {UML - DIAGRAMA DE SEQUÊNCIA},
-  year      = {2024},
-  url       = {https://cms.ipbeja.pt/pluginfile.php/184424/mod_resource/content/2/aula6Sequencia.pdf},
-  note      = {UC: Engenharia de Software},
-  urldate   = {2024-10-31}
+  author  = {Isabel Sofia Brito},
+  title   = {UML - DIAGRAMA DE SEQUÊNCIA},
+  year    = {2024},
+  url     = {https://cms.ipbeja.pt/pluginfile.php/184424/mod_resource/content/2/aula6Sequencia.pdf},
+  note    = {UC: Engenharia de Software},
+  urldate = {2024-10-31}
 }
 
 
 @online{kaggle,
-  author    = {Tawfik Elmetwally},
-  title     = {Car information dataset},
-  year      = {2023},
-  url       = {https://www.kaggle.com/datasets/tawfikelmetwally/automobile-dataset/data},
-  note      = {Base De Dados Kaggle},
-  urldate   = {2024-10-14}
+  author  = {Tawfik Elmetwally},
+  title   = {Car information dataset},
+  year    = {2023},
+  url     = {https://www.kaggle.com/datasets/tawfikelmetwally/automobile-dataset/data},
+  note    = {Base De Dados Kaggle},
+  urldate = {2024-10-14}
+}
+
+@online{pet73,
+  author  = {Wikipédia},
+  title   = {Crise petrolífera de 1973},
+  year    = {2024},
+  url     = {https://pt.wikipedia.org/wiki/Crise_petrol%C3%ADfera_de_1973},
+  note    = {Crises Petrolíferas},
+  urldate = {2024-11-10}
+}
+
+@online{pet79,
+  author  = {Wikipédia},
+  title   = {Crise petrolífera de 1979},
+  year    = {2024},
+  url     = {https://pt.wikipedia.org/wiki/Crise_petrol%C3%ADfera_de_1979},
+  note    = {Crises Petrolíferas},
+  urldate = {2024-11-10}
 }
