Correção de Erros Ortográficos e Atualização de Referências

--- a/Relatorio/Recursos/referencias.bib
+++ b/Relatorio/Recursos/referencias.bib
@@ -7,6 +7,15 @@
   urldate = {2024-10-14}
 }
 
+@online{usdoe,
+  author  = {US~Department~of~Energy},
+  title   = {Average Annual Retail Fuel Price of Gasoline},
+  year    = {2024},
+  url     = {https://afdc.energy.gov/data/10641},
+  note    = {Preços dos Combustíveis},
+  urldate = {2024-11-11}
+}
+
 @online{pet73,
   author  = {Wikipédia},
   title   = {Crise petrolífera de 1973},
