--- a/Relatorio/Relatorio.tex
+++ b/Relatorio/Relatorio.tex
@@ -67,8 +67,8 @@
         \vspace{1.5cm}
         
         % Autores
-        \large Martinho José Novo Caeiro \\
-        \large Paulo António Tavares Abade \\
+        \large Martinho José Novo Caeiro - 23917 \\
+        \large Paulo António Tavares Abade - 23919 \\
         
         \vfill
         
@@ -104,8 +104,8 @@
         \vspace{1.5cm}
         
         % Autores
-        \large Martinho José Novo Caeiro \\
-        \large Paulo António Tavares Abade \\
+        \large Martinho José Novo Caeiro - 23917 \\
+        \large Paulo António Tavares Abade - 23919 \\
         
         \vfill
         
@@ -150,15 +150,15 @@ desenvolvimento dos carros entre os anos 1970 e 1980, alterando o motor e por co
 \section{Metodologia de Trabalho}\label{met}
 Para o desenvolvimento deste trabalho foi utilizado o \textit{Github} para a partilha de código e documentação,
 o \textit{Visual Studio Code} como IDE de desenvolvimento, o \textit{Excel - PowerQuery} ferramenta principal de tratamento
-e análise de dados e por fim, o \textit{SQL Server Managment} para a criação da Dataware House. 
+e análise de dados e por fim, o \textit{SQL Server Management} para a criação da Data Warehouse. 
 %---------------------------------------------------------------------------------------------------------------------------
 \section{ETL}\label{etl}
 O trabalho de ETL foi realizado em 3 fases, a primeira foi a extração dos dados, 
 a segunda a transformação e por fim a inserção dos dados em tabelas dinâmicas.
 %---------------------------------------------------------------------------------------------------------------------------
 \subsection{Extração de Dados}
-Os dados foram extraídos de um ficheiro \textit{.csv} que foi encontrado no Kaggle (\cite{kaggle}) e 
-importados para o \textit{Excel} utilizando o PowerQuery.
+Os dados foram extraídos de um ficheiro \textit{.csv} que foi encontrado no Kaggle (\cite{kaggle}) e no US Department of Energy (\cite{usdoe}), 
+estes foram importados para o \textit{Excel} utilizando o PowerQuery.
 %---------------------------------------------------------------------------------------------------------------------------
 \subsection{Transformação de Dados}
 Com o auxílio do PowerQuery foi possível transformar os dados, e foram encontrados diversos problemas,
