--- a/Relatorio/Recursos/referencias.bib
+++ b/Relatorio/Recursos/referencias.bib
@@ -33,3 +33,14 @@
   note    = {Crises Petrolíferas},
   urldate = {2024-11-10}
 }
+
+
+
+@online{chatgpt,
+  author  = {OpenAI},
+  title   = {ChatGPT},
+  year    = {2024},
+  url     = {https://chatgpt.com},
+  note    = {ChatGPT},
+  urldate = {2024-11-10}
+}
