TODO: Alterar Prints dos Gráficos

--- a/Relatorio/Relatorio.tex
+++ b/Relatorio/Relatorio.tex
@@ -159,7 +159,9 @@ e análise de dados e por fim, o \textit{SQL Server Management} para a criação
 %---------------------------------------------------------------------------------------------------------------------------
 \section{ETL}\label{etl}
 O trabalho de ETL foi realizado em 3 fases, a primeira foi a extração dos dados, 
-a segunda a transformação e por fim a inserção dos dados em tabelas dinâmicas.
+a segunda a transformação e por fim a inserção dos dados em tabelas dinâmicas para 
+facilitar a visualização dos dados ao visualizador.
+\newpage
 %---------------------------------------------------------------------------------------------------------------------------
 \subsection{Extração de Dados}
 Os dados foram extraídos de um ficheiro \textit{.csv} que foi encontrado no Kaggle (\cite{kaggle}) e no US Department of Energy (\cite{usdoe}), 
@@ -193,7 +195,6 @@ a evolução da eficiência dos carros ao longo dos anos e ainda a evolução da
 Para isso, o Excel possuí opção de selecionar a visualização dos dados por ano, por país e por marca.
 Isso foi feito pensando na segmentação dos dados, para que seja possível visualizar os dados de forma mais clara e objetiva.
 
-\newpage
 %---------------------------------------------------------------------------------------------------------------------------
 
 \subsubsection{Milhas Por Galão}
