--- a/Relatorio/Recursos/referencias.bib
+++ b/Relatorio/Recursos/referencias.bib
@@ -44,3 +44,39 @@
   note    = {ChatGPT},
   urldate = {2024-11-10}
 }
+
+@online{moodle,
+  author  = {Isabel Sofia Brito},
+  title   = {Data Warehouse},
+  year    = {2024},
+  url     = {https://cms.ipbeja.pt/pluginfile.php/191039/mod_resource/content/2/OLAP2024.pdf},
+  note    = {Informações Dispobilizadas na Plataforma Moodle},
+  urldate = {2024-11-10}
+}
+
+@online{stackoverflow,
+  author  = {Stack Overflow},
+  title   = {Stack Overflow},
+  year    = {2024},
+  url     = {https://stackoverflow.com},
+  note    = {Soluções para Programadores},
+  urldate = {2024-11-11}
+}
+
+@online{microsofthelp,
+  author  = {Microsoft},
+  title   = {Microsoft Help},
+  year    = {2024},
+  url     = {https://support.microsoft.com},
+  note    = {Ajuda da Microsoft},
+  urldate = {2024-11-11}
+  }
+
+@online{github,
+  author  = {Martinho~Caeiro, Paulo~Abade},
+  title   = {Trabalho Prático 1 - Repositório de Código},
+  year    = {2024},
+  url     = {https://github.com/zDragonPaulo/SI-TG1},
+  note    = {Repositório do Trabalho Prático 1},
+  urldate = {2024-11-11}
+}
